completed skeletonof  website with different pages

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,28 +1,85 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 
-<head>
-  <title>TEST</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.min.css" />
+<!-- head tag contains information about website and loads css and js files-->
 
+<head>
+    <!-- utf-8 is a unicode encoding that allows letters/nums/symbols to by translated to bytes -->
+    <meta charset="utf-8">
+
+    <!-- ensures content displays well on all devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- each website page has its own title in the tab -->
+    <title>Landing Page</title>
 </head>
 
-<body style="background-color: white;">
-  <table width="100%" border="0" cellspacing="0" cellpadding="0">
-    <tr>
-      <td align="center">
-        <h3>
-          <font color="#990000">HOWDY!!!</font>
-        </h3>
-      </td>
-    </tr>
-    <tr>
-      <td align="center">
-        <font color="#990000"><br><br>This page is currently under construction...</font>
-      </td>
-    </tr>
-  </table>
+<!-- body tag contains main content and everything you see -->
+
+<body style="background-color: whitesmoke;">
+    <!-- header tags can be used to mark titles, subtitles, sections, etc. -->
+    <h1>Stephen Ndubueze</h1>
+    <hr>
+
+    <!-- image tag can be used to attach images linked in src attribute -->
+    <img src="200.png" border="10" alt="A picture of me">
+
+    <!-- the paragraph tag can be used to separate content into blocks -->
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a felis sed arcu tincidunt pellentesque non a
+        enim. Fusce volutpat ultricies sollicitudin. Nam nec augue odio. Phasellus congue neque quam, ac finibus urna
+        ornare eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse bibendum diam non dui
+        imperdiet tincidunt. Sed at malesuada augue. Donec commodo scelerisque quam, nec sagittis quam euismod id. Fusce
+        ut posuere ex, non laoreet turpis. Ut eu eros id sem efficitur posuere sed non arcu. Maecenas a aliquet sapien.
+        Sed mollis augue vitae volutpat tristique. Donec placerat augue a lacus fermentum ultricies.
+    </p>
+
+    <p>
+        <a href="portfolio.html">Portfolio</a> <br>
+        <a href="qualifications.html">Qualifications</a> <br>
+        <a href="service.html">Service</a> <br>
+    </p>
+
+    <h2>Experience</h2>
+
+    <p>
+        Mauris convallis tortor eu nunc dictum gravida. Nullam et diam ultrices, tincidunt lorem in, consequat nisl.
+        Praesent molestie aliquam neque non tempus. Duis ac bibendum arcu. Etiam lacinia, nisi vitae ornare consequat,
+        justo quam egestas augue, id sollicitudin felis libero et lorem. Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit. Donec scelerisque ligula sed condimentum congue. Cras cursus sem tristique mauris condimentum
+        bibendum. Donec quis pretium enim. Phasellus sed aliquam urna.
+    </p>
+
+    <h2>Career Summary</h2>
+
+    <!-- table tag for organizing info into rows(tr) and columns(th for headers, td for data) -->
+    <table border="10" cellpadding="10" cellspacing="0">
+        <tr>
+            <th>Years</th>
+            <th>Occupation</th>
+        </tr>
+        <tr>
+            <td>2014-2017</td>
+            <td>Houston Methodist</td>
+        </tr>
+    </table>
+
+    <h2>Qualifications</h2>
+    <h2>Contact</h2>
+
+    <!-- unordered list tag for bullet points -->
+    <ul>
+        <li>Email: sundubueze78@gmail.com</li>
+    </ul>
+
+
+    <h2>Portfolio</h2>
+    <p>
+        <!-- the anchor tag is a hyperlink -->
+        <a href="https://drive.google.com/file/d/1C6mPzElGTBignGG9MKdQnHW3OI0hpHQs/view?usp=sharing"
+            target="_blank">Click here</a>
+    </p>
+
 
 </body>
 
