--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,7 +31,7 @@
         ornare eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse bibendum diam non dui
         imperdiet tincidunt. Sed at malesuada augue. Donec commodo scelerisque quam, nec sagittis quam euismod id. Fusce
         ut posuere ex, non laoreet turpis. Ut eu eros id sem efficitur posuere sed non arcu. Maecenas a aliquet sapien.
-        Sed mollis augue vitae volutpat tristique. Donec placerat augue a lacus fermentum ultricies.
+        Sed mollis augue vitae volutpat tristique. Donec placerat augue a lacus fermentum ultricies..
     </p>
 
     <p>
