updated pages to reflect project requirements

--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -7,10 +7,46 @@
     <title>Portfolio</title>
 </head>
 
-<body>
+<body style="background-color: whitesmoke;">
     <h1>Portfolio</h1>
     <hr>
+    <!-- the anchor tag is a hyperlink -->
     <a href="index.html">Home</a>
+
+    <h2>Check out my creations</h2>
+    <p>
+        <b>Labyrinth-Game</b> <br>
+        <a href="https://github.com/Stephen-N/Labyrinth-Game"><img src="labyrinth.png" alt="labyrinth game"
+                width="300"></a> <br><br>
+
+    <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec mattis arcu. Pellentesque eleifend
+            magna imperdiet lobortis dignissim.</li>
+    </ul>
+
+
+    <b>Multi-echo filter</b> <br>
+    <a href="https://github.com/Stephen-N/ecen314-project"><img src="multi_echo_figure.jpg" alt="echo filter"
+            width="300"></a> <br><br>
+
+    <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec mattis arcu. Pellentesque eleifend
+            magna imperdiet lobortis dignissim.</li>
+    </ul>
+
+    <b>World Education Statistics Calculator</b> <br>
+    <a href="https://github.com/Stephen-N/World-Education-Statistics-Calculator"><img src="calculator.png"
+            alt="statistics calculator" width="300"></a>
+
+    <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec mattis arcu. Pellentesque eleifend
+            magna imperdiet lobortis dignissim.</li>
+    </ul>
+    </p>
+
+
+
+
 </body>
 
 </html>
