--- a/public_html/qualifications.html
+++ b/public_html/qualifications.html
@@ -7,10 +7,25 @@
     <title>Qualifications</title>
 </head>
 
-<body>
+<body style="background-color: whitesmoke;">
     <h1>Qualifications</h1>
     <hr>
     <a href="index.html">Home</a>
+
+    <p>
+        <a href="https://drive.google.com/file/d/1C6mPzElGTBignGG9MKdQnHW3OI0hpHQs/view?usp=sharing" target="_blank">
+            <h2>Resume</h2>
+        </a>
+
+    <h2>Technical Skills</h2>
+    Duis tempor hendrerit vestibulum. Morbi feugiat sollicitudin enim, sit amet auctor velit commodo vel. Duis a enim ac
+    elit pellentesque scelerisque. Nullam in commodo odio. Pellentesque vehicula ante diam, nec egestas leo consectetur
+    quis. Vestibulum dapibus nunc nec congue convallis. Vestibulum lacinia purus non purus interdum ultricies. Cras
+    blandit, purus at vehicula molestie, est ex tempor quam, dictum porta massa nulla et velit. Sed vulputate, est vitae
+    pretium ullamcorper, sem elit finibus tellus, finibus vestibulum erat ipsum non orci. Duis pharetra lacinia laoreet.
+    Donec eu pulvinar odio, a egestas lectus. Fusce in enim a est ullamcorper finibus id sed velit. Aliquam ut tortor
+    enim. Sed ornare lobortis nibh, nec malesuada felis iaculis quis.
+    </p>
 </body>
 
 </html>
