--- a/public_html/service.html
+++ b/public_html/service.html
@@ -7,10 +7,22 @@
     <title>Service</title>
 </head>
 
-<body>
+<body style="background-color: whitesmoke;">
     <h1>Service</h1>
     <hr>
     <a href="index.html">Home</a>
+
+    <!-- table tag for organizing info into rows(tr) and columns(th for headers, td for data) -->
+    <table border="10" cellpadding="10" cellspacing="0">
+        <tr>
+            <th>Years</th>
+            <th>Occupation</th>
+        </tr>
+        <tr>
+            <td>2014-2017</td>
+            <td>Houston Methodist</td>
+        </tr>
+    </table>
 </body>
 
 </html>
