--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,10 @@
     <!-- ensures content displays well on all devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <!-- each website page has its own title in the tab -->
     <title>Landing Page</title>
 </head>
@@ -17,35 +21,26 @@
 <!-- body tag contains main content and everything you see -->
 
 <body style="background-color: whitesmoke;">
-    <!-- header tags can be used to mark titles, subtitles, sections, etc. -->
-    <h1>Stephen Ndubueze</h1>
-    <hr>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark pl-2">
+        <a href="home.html">Home</a> |
+        <a href="portfolio.html">Portfolio</a> |
+        <a href="qualifications.html">Qualifications</a> |
+        <a href="service.html">Service</a>
+    </nav>
 
-    <!-- image tag can be used to attach images linked in src attribute -->
-    <img src="200.png" border="10" alt="A picture of me">
+    <div class="bgimg">
+        <div class="topLeft">
+            <p>Logo</p>
+        </div>
+        <div class="middle">
+            <!-- header tags can be used to mark titles, subtitles, sections, etc. -->
+            <h1>Howdy!</h1>
+        </div>
+        <div class="bottomLeft">
+            <p>lorem ipsum</p>
+        </div>
+    </div>
 
-    <!-- the paragraph tag can be used to separate content into blocks -->
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a felis sed arcu tincidunt pellentesque non a
-        enim. Fusce volutpat ultricies sollicitudin. Nam nec augue odio. Phasellus congue neque quam, ac finibus urna
-        ornare eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse bibendum diam non dui
-        imperdiet tincidunt. Sed at malesuada augue. Donec commodo scelerisque quam, nec sagittis quam euismod id. Fusce
-        ut posuere ex, non laoreet turpis. Ut eu eros id sem efficitur posuere sed non arcu. Maecenas a aliquet sapien.
-        Sed mollis augue vitae volutpat tristique. Donec placerat augue a lacus fermentum ultricies..
-    </p>
-
-    <p>
-        <a href="portfolio.html">Portfolio</a> <br>
-        <a href="qualifications.html">Qualifications</a> <br>
-        <a href="service.html">Service</a> <br>
-    </p>
-
-    <h2>Contact</h2>
-
-    <!-- unordered list tag for bullet points -->
-    <ul>
-        <li>Email: sundubueze78@gmail.com</li>
-    </ul>
 
 </body>
 
