--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -2,12 +2,28 @@
 <html>
 
 <head>
+    <!-- utf-8 is a unicode encoding that allows letters/nums/symbols to by translated to bytes -->
     <meta charset="utf-8">
+
+    <!-- ensures content displays well on all devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- each website page has its own title in the tab -->
     <title>Portfolio</title>
 </head>
 
 <body style="background-color: whitesmoke;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark pl-2">
+        <a href="home.html">Home</a> |
+        <a href="portfolio.html">Portfolio</a> |
+        <a href="qualifications.html">Qualifications</a> |
+        <a href="service.html">Service</a>
+    </nav>
+
     <h1>Portfolio</h1>
     <hr>
     <!-- the anchor tag is a hyperlink -->
