--- a/public_html/secret.html
+++ b/public_html/secret.html
@@ -18,6 +18,13 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark pl-2">
+        <a href="home.html">Home</a> |
+        <a href="portfolio.html">Portfolio</a> |
+        <a href="qualifications.html">Qualifications</a> |
+        <a href="service.html">Service</a>
+    </nav>
+
     Strange to find you here.
 </body>
 
