--- a/public_html/home.html
+++ b/public_html/home.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <!-- external script -->
+    <script src="functions.js"></script>
+
     <!-- each website page has its own title in the tab -->
     <title>Home Page</title>
 </head>
@@ -21,7 +24,7 @@
 <!-- body tag contains main content and everything you see -->
 
 <body style="background-color: whitesmoke;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark pl-2">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #800000;">
         <a href="index.html">Landing Page</a> |
         <a href="portfolio.html">Portfolio</a> |
         <a href="qualifications.html">Qualifications</a> |
@@ -33,7 +36,11 @@
     <hr>
 
     <!-- image tag can be used to attach images linked in src attribute -->
-    <img src="200.png" border="10" alt="A picture of me">
+    <img src="images/200.png" border="10" alt="A picture of me">
+
+    <button type="button" onclick="myLightFunction()">Light mode</button>
+
+    <button type="button" onclick="myDarkFunction()">Dark mode</button>
 
     <!-- the paragraph tag can be used to separate content into blocks -->
     <p>
