updated image paths

--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -32,7 +32,7 @@
     <h2>Check out my creations</h2>
     <p>
         <b>Labyrinth-Game</b> <br>
-        <a href="https://github.com/Stephen-N/Labyrinth-Game"><img src="labyrinth.png" alt="labyrinth game"
+        <a href="https://github.com/Stephen-N/Labyrinth-Game"><img src="images/labyrinth.png" alt="labyrinth game"
                 width="300"></a> <br><br>
 
     <ul>
@@ -42,7 +42,7 @@
 
 
     <b>Multi-echo filter</b> <br>
-    <a href="https://github.com/Stephen-N/ecen314-project"><img src="multi_echo_figure.jpg" alt="echo filter"
+    <a href="https://github.com/Stephen-N/ecen314-project"><img src="images/multi_echo_figure.jpg" alt="echo filter"
             width="300"></a> <br><br>
 
     <ul>
@@ -51,7 +51,7 @@
     </ul>
 
     <b>World Education Statistics Calculator</b> <br>
-    <a href="https://github.com/Stephen-N/World-Education-Statistics-Calculator"><img src="calculator.png"
+    <a href="https://github.com/Stephen-N/World-Education-Statistics-Calculator"><img src="images/calculator.png"
             alt="statistics calculator" width="300"></a>
 
     <ul>
