--- a/public_html/qualifications.html
+++ b/public_html/qualifications.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <!-- external script -->
+    <script src="functions.js"></script>
+
     <!-- each website page has its own title in the tab -->
     <title>Qualifications</title>
 </head>
@@ -32,6 +35,8 @@
         <a href="https://drive.google.com/file/d/1C6mPzElGTBignGG9MKdQnHW3OI0hpHQs/view?usp=sharing" target="_blank">
             <h2>Resume</h2>
         </a>
+        <iframe src="https://drive.google.com/file/d/1C6mPzElGTBignGG9MKdQnHW3OI0hpHQs/preview" width="640" height="480"
+            allow="autoplay"></iframe>
 
     <h2>Technical Skills</h2>
     Duis tempor hendrerit vestibulum. Morbi feugiat sollicitudin enim, sit amet auctor velit commodo vel. Duis a enim ac
