--- a/public_html/service.html
+++ b/public_html/service.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <!-- external script -->
+    <script src="functions.js"></script>
+
     <!-- each website page has its own title in the tab -->
     <title>Service</title>
 </head>
