same as prev commit

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -36,7 +36,7 @@
     <hr>
 
     <!-- image tag can be used to attach images linked in src attribute -->
-    <img src="images/200.png" border="10" alt="A picture of me">
+    <img src="images/me_suit.jpg" border="10" alt="A picture of me">
 
     <button type="button" onclick="myLightFunction()">Light mode</button>
 
@@ -44,12 +44,8 @@
 
     <!-- the paragraph tag can be used to separate content into blocks -->
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a felis sed arcu tincidunt pellentesque non a
-        enim. Fusce volutpat ultricies sollicitudin. Nam nec augue odio. Phasellus congue neque quam, ac finibus urna
-        ornare eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse bibendum diam non dui
-        imperdiet tincidunt. Sed at malesuada augue. Donec commodo scelerisque quam, nec sagittis quam euismod id. Fusce
-        ut posuere ex, non laoreet turpis. Ut eu eros id sem efficitur posuere sed non arcu. Maecenas a aliquet sapien.
-        Sed mollis augue vitae volutpat tristique. Donec placerat augue a lacus fermentum ultricies..
+        Howdy! I'm a computer engineering major from Texas A&M University. I enjoy playing the piano, reading, and video
+        games.
     </p>
     <br>
 
@@ -58,6 +54,7 @@
     <!-- unordered list tag for bullet points -->
     <ul>
         <li>Email: sundubueze78@gmail.com</li>
+        <li>Linkedin: https://www.linkedin.com/in/stephen-ndubueze/</li>
     </ul>
 
 </body>
