--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -64,7 +64,16 @@
     </p>
 
 
+    <footer>
+        <p style="font-family: rubik; font-size: .7em;" class="landingtext">
+            <button type="button" onclick="myLightFunction()">Light mode</button>
+            <button type="button" onclick="myDarkFunction()">Dark mode</button>
 
+            <br>
+
+            Copyright © 2021 Stephen Ndubueze. All Rights Reserved.
+        </p>
+    </footer>
 
 </body>
 
