--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,10 +53,11 @@
         </div>
 
         <!-- header tags can be used to mark titles, subtitles, sections, etc. -->
-        <h1 style="text-align: center; font-family: Levenim;" class="landingtext">Howdy! I'm Stephen Ndubueze.</h1>
+        <h1 style="text-align: center; font-family: Levenim;" class="landingtext strokeme">Howdy! I'm Stephen Ndubueze.
+        </h1>
 
         <!-- the paragraph tag can be used to separate content into blocks -->
-        <p style="text-align: center;" class="landingtext">
+        <p style="text-align: center;" class="landingtext strokeme">
             I'm a computer engineering major from Texas A&M University. I enjoy playing the piano, reading, and
             video
             games.
@@ -74,7 +75,7 @@
         </div>
 
         <footer>
-            <p style="font-family: rubik; font-size: .7em;" class="landingtext">
+            <p style="font-family: rubik; font-size: .7em;" class="landingtext strokeme">
                 Copyright © 2021 Stephen Ndubueze. All Rights Reserved.
             </p>
         </footer>
