--- a/public_html/secret.html
+++ b/public_html/secret.html
@@ -16,19 +16,35 @@
     <!-- external script -->
     <script src="functions.js"></script>
 
+    <!-- external css -->
+    <link rel="stylesheet" href="style.css">
+
     <!-- each website page has its own title in the tab -->
     <title>Secret Page</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark pl-2">
-        <a href="home.html">Home</a> |
-        <a href="portfolio.html">Portfolio</a> |
-        <a href="qualifications.html">Qualifications</a> |
-        <a href="service.html">Service</a>
+    <nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #800000;">
+        <a class="navbar-brand" href="https://engineering.tamu.edu/">
+            <img src="images/a&m_icon.png" height="50" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio </a>
+                <a class="nav-item nav-link" href="qualifications.html">Qualifications</a>
+                <a class="nav-item nav-link" href="service.html">Service</a>
+            </div>
+        </div>
     </nav>
 
-    Strange to find you here.
+    <div style="margin-top: 30px; color: black;">
+        Strange to find you here.
+    </div>
 </body>
 
 </html>
