changed email icon to not open in new tab

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -69,7 +69,7 @@
             <!-- unordered list tag for bullet points -->
             <ul id="social-list">
                 <li id="linkedin"><a href="https://www.linkedin.com/in/stephen-ndubueze/" target="_blank"></a></li>
-                <li id="email"><a href="mailto:sundubueze78@gmail.com" target="_blank"></a></li>
+                <li id="email"><a href="mailto:sundubueze78@gmail.com"></a></li>
                 <li id="github"><a href="https://github.com/Stephen-N" target="_blank"></a></li>
             </ul>
         </div>
