added dark/ight mode toggle to all pages

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -75,6 +75,8 @@
         </div>
 
         <footer>
+            <button onclick="myLightFunction()">Toggle light mode</button>
+            <button onclick="myFunction()">Toggle dark mode</button>
             <p style="font-family: rubik; font-size: .7em;" class="landingtext strokeme">
                 Copyright © 2021 Stephen Ndubueze. All Rights Reserved.
             </p>
