--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -87,6 +87,10 @@
         </p>
     </div>
 
+    <button onclick="myLightFunction()">Toggle light mode</button>
+    <button onclick="myFunction()">Toggle dark mode</button>
+
+
 
 </body>
 
