--- a/public_html/qualifications.html
+++ b/public_html/qualifications.html
@@ -85,6 +85,9 @@
 
     </div>
 
+    <button onclick="myLightFunction()">Toggle light mode</button>
+    <button onclick="myFunction()">Toggle dark mode</button>
+
 </body>
 
 </html>
