--- a/public_html/secret.html
+++ b/public_html/secret.html
@@ -45,6 +45,9 @@
     <div style="margin-top: 30px; color: black;">
         Strange to find you here.
     </div>
+
+    <button onclick="myLightFunction()">Toggle light mode</button>
+    <button onclick="myFunction()">Toggle dark mode</button>
 </body>
 
 </html>
