--- a/public_html/service.html
+++ b/public_html/service.html
@@ -81,6 +81,9 @@
             during a vulnerable moment in their lives helped me mature in some ways I wouldn't have grown in otherwise.
         </p>
     </div>
+
+    <button onclick="myLightFunction()">Toggle light mode</button>
+    <button onclick="myFunction()">Toggle dark mode</button>
 </body>
 
 </html>
